--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "resolveJsonModule": true,
     "moduleResolution": "node"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "tests"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
