--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@unocss/core": "^66.3.3",
+    "@unocss/preset-typography": "^66.3.3",
+    "@unocss/preset-wind3": "^66.3.3",
     "commander": "^11.0.0",
     "marked": "^16.0.0",
     "marked-directive": "^1.0.7",
