--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "@unocss/preset-web-fonts": "^66.3.3",
     "@unocss/preset-wind3": "^66.3.3",
     "commander": "^11.0.0",
+    "gray-matter": "^4.0.3",
     "marked": "^16.0.0",
     "marked-directive": "^1.0.7",
-    "mustache": "^4.2.0"
+    "mustache": "^4.2.0",
+    "tailwind-merge": "^2.6.0"
   }
 }
